docs/sf-export/sfdx-raw/objects/Commission_Tier_Structure__c/Commission_Tier_Structure__c.object-meta.xml
<CustomObject>
    <label>Commission Tier Structure</label>
    <nameField>
        <displayFormat>CTS-{000000}</displayFormat>
        <label>Commission Tier Structure Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commission Tier Structures</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>