docs/sf-export/sfdx-raw/objects/Commission_Tier_Structure__c/fields/Minimum_Total_Debt_Amount__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Total_Debt_Amount__c</fullName>
    <label>Minimum Total Debt Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>